Alignment problem has been resolved on Activity Graph and Timeline.

--- a/app/client/styles/pages/_settings.scss
+++ b/app/client/styles/pages/_settings.scss
@@ -8,7 +8,7 @@
   }
 
   i {
-    font-size: 4.2rem;
+    font-size: 2.2rem;
     color: $extra-light-grey;
   }
   
